# lambda-utils

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt
lambda_utility/: __init__.py  function.py  image.py  mp.py  multiprocessing.py  path.py  process.py  s3storage.py  schema.py  session.py  slack.py  sqs.py  typedefs.py  utils.py  zipper.py
lambda_utility/types/: aws_config.py  aws_lambda.py  aws_s3.py  common.py
lambda_utils/: __init__.py  _session.py  function.py  path.py  s3storage.py  schema.py
