[tool.poetry]
name = "lambda-utility"
version = "1.11.0"
description = ""
authors = ["Pie <pie.pie@kakaoent.com>"]
maintainers = ["Pie <pie.pie@kakaoent.com>"]
readme = "README.md"
homepage = "https://github.com/kakao-webtoon/lambda-utility"
repository = "https://github.com/kakao-webtoon/lambda-utility"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.8.1"
aiobotocore = "^1.3.0"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
