[tool.poetry]
name = "lambda-utility"
version = "2.0.0-alpha"
description = ""
authors = ["Pie <pie.pie@kakaoent.com>"]
maintainers = ["Pie <pie.pie@kakaoent.com>"]
readme = "README.md"
homepage = "https://github.com/kakao-webtoon/lambda-utility"
repository = "https://github.com/kakao-webtoon/lambda-utility"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
aiobotocore = "^1.4.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.8b0"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
